zero-trust/authorization-policy-productpage-viewer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "productpage-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: productpage
  action: ALLOW
  rules:
    - to:
      - operation:
          methods: ["GET"]
      from:
      - source:
          principals: [ "cluster.local/ns/default/sa/sleep" ]
