zero-trust/authorization-policy-ratings-defaults-viewer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "ratings-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: ratings
  action: ALLOW
  rules:
    - to:
      - operation:
          methods: ["GET"]
          paths: ["/ratings/*"]
      from:
      - source:
          principals: [ "cluster.local/ns/default/sa/*" ]
