zero-trust/authorization-policy-reviews-viewer.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: "reviews-viewer"
  namespace: default
spec:
  selector:
    matchLabels:
      app: reviews
  action: ALLOW
  rules:
    - to:
      - operation:
          methods: ["GET"]
      from:
      - source:
          principals: [ "cluster.local/ns/default/sa/bookinfo-productpage" ]
